--- a/components/sections/hero/hero.module.css
+++ b/components/sections/hero/hero.module.css
@@ -25,7 +25,12 @@
 }
 
 .scrollIndicator {
+  bottom: 5rem;
+  left: 50%;
   opacity: 0;
+  position: absolute;
+  transform: translateX(-50%);
+  z-index: 10;
 
   @media (--reduced-motion) {
     opacity: 1;
